feat: 도서 관리 REST API 완성 및 한글 인코딩 지원
주요 변경사항:
- BookRepository 인터페이스 구현 (검색 기능 포함)
- BookService/BookServiceImpl 완전 리팩토링
  * 페이지네이션 지원 추가
  * 우리 DTO 구조(ApiResponse) 적용
  * ResourceNotFoundException 사용
- BookController REST API 완성
  * GET /api/books (목록 조회, 검색, 페이지네이션)
  * GET /api/books/{id} (상세 조회)
  * POST /api/books (도서 생성)
  * PUT /api/books/{id} (도서 수정)
  * PATCH /api/books/{id}/cover-url (표지 URL 업데이트)
  * DELETE /api/books/{id} (도서 삭제)

한글 지원:
- application.properties에 UTF-8 인코딩 설정 추가
- 한글 도서명, 작가명, 내용 완벽 지원
- URL 쿼리 파라미터 한글 검색 지원

테스트:
- BookServiceTest 완전 재작성 (모든 CRUD 시나리오)
- 실제 API 엔드포인트 동작 검증 완료
- 한글 데이터 생성/조회/검색 테스트 성공

React 연동 준비:
- CORS 설정 완료 (localhost:3000)
- 일관된 JSON 응답 구조 (ApiResponse<T>)
- 표준 HTTP 상태 코드 및 에러 처리
- 페이지네이션 표준 구조 지원

결과:
- 31개 컴파일 오류 해결
- 완전한 RESTful API 구현
- React 프론트엔드와 즉시 연동 가능
- AI 표지 생성 기능 연동 준비 완료